test_suite/tests/ui/repr/missing_repr.rs
use cstree::Syntax;

#[derive(Debug, Clone, Copy, PartialEq, Eq, Syntax)]
pub enum SyntaxKind {
    A,
    #[static_text("b")]
    B,
}

fn main() {}
